# user-svc

./: .env  .gitignore  .gitmodules  Cargo.toml  build.rs  example.settings.toml
.sqlx/: query-4c1b64afce601ba9460c93b8f6b8b4eba722b9786ab5346af2e11b5aa2cb3980.json  query-651d14dc0fc231a959dcf64deb8a10ca33baf6edfd94f7e6247edeb6e549ab92.json  query-b83ce0b71f12c5736a3e2eeed0c58a522a6cd0783552b53fcb9e1a16b62b19fa.json  query-cf96e5dd4829e67441384ebb69a63089226728e61effef19103e9f407b0fa601.json
migrations/: 20250510101712_create_users_table.down.sql  20250510101712_create_users_table.up.sql  20250511024110_add_timestamps.down.sql  20250511024110_add_timestamps.up.sql  20250511035451_modify_id_in_users_table.down.sql  20250511035451_modify_id_in_users_table.up.sql  20250513084629_alert_timestamp_columns.down.sql  20250513084629_alert_timestamp_columns.up.sql
src/: client.rs  lib.rs  main.rs  pb.rs  server.rs  settings.rs
src/db/: dto.rs  entity.rs  mod.rs  repository.rs
